--- a/app/src/main/res/layout/promotions_recycler_view.xml
+++ b/app/src/main/res/layout/promotions_recycler_view.xml
@@ -6,5 +6,5 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/promotions_list" />
+        android:id="@+id/promotions_recyler_view_id" />
 </LinearLayout>
